--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -5,6 +5,6 @@ $big-mobile-min-width: 600px;
 $desktop-min-width: 1024px;
 
 $bg-color: #EDEDEE;
-$font-color: #3A4767;
+$blue-color: #3A4767;
 $brown-color: #70592D;
 
