--- a/components/filter-by-name/styles.module.scss
+++ b/components/filter-by-name/styles.module.scss
@@ -3,14 +3,25 @@
 .filter_container {
   display: flex;
   margin-bottom: 12px;
+  width: 220px;
+  padding: 4px 12px;
+  margin: auto auto 14px;
   svg {
     margin-right: 0;
+    color: $bg-color;
   }
 }
 
 .input {
   width: 100%;
+
+  input {
+    color: $bg-color;
+  }
   div::after {
     border-bottom: 2px solid $brown-color;
   }
+}
+.delete_icon:hover {
+  cursor: pointer;
 }
