--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,12 +5,24 @@
 * {
   box-sizing: border-box;
   outline: none;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: $bg-color;
+  background: url(https://images3.alphacoders.com/812/812062.png);
+  background-size: cover;
+  overflow: hidden;
+  backdrop-filter: blur(7px) sepia(1);
+  position: absolute;
+
+}
+html,
+body {
+  width: 100vw;
+  height: 100vh;
 }
 
 html,
@@ -99,7 +111,6 @@ video {
   padding: 0;
   border: 0;
   vertical-align: baseline;
-  font: 100%;
 }
 
 article,
