--- a/components/character-card/styles.module.scss
+++ b/components/character-card/styles.module.scss
@@ -4,3 +4,12 @@
   color: $bg-color;
   background: $brown-color;
 }
+
+@include for-desktop {
+  .card {
+    transition: all ease 0.5s;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+}
