--- a/pages/detail/[character_id]/styles.module.scss
+++ b/pages/detail/[character_id]/styles.module.scss
@@ -21,7 +21,7 @@
   position: absolute;
   left: 12px;
   z-index: 10;
-  color: $brown-color;
+  color: $blue-color;
 }
 
 @include for-desktop {
@@ -32,11 +32,9 @@
 
   .back_arrow {
     position: absolute;
-    z-index: 10;
     margin-left: 12px;
     left: auto;
     top: 60px;
-    color: $brown-color;
     &:hover {
       cursor: pointer;
     }
