--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,16 +13,16 @@ body {
   font-family: roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: url(https://images3.alphacoders.com/812/812062.png);
+  background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
   backdrop-filter: blur(7px) sepia(1);
   position: absolute;
 
 }
 html,
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 html,
