--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -16,14 +16,19 @@
   width: 100%;
 }
 
-.title, .subtitle{
+.title,
+.subtitle {
   text-align: center;
   font-weight: 700;
 }
 
-.title{
+.title {
   font-size: 32px;
   margin-bottom: 48px;
+  width: 100%;
+  padding: 0 8px;
+  border-radius: 5px;
+  background: $blue-color;
 }
 
 .subtitle {
