--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,7 +12,7 @@
 body {
   font-family: roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: url(https://images3.alphacoders.com/812/812062.png);
+  background: url("../public/assets/images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   backdrop-filter: blur(7px) sepia(1);
