--- a/pages/detail/[character_id]/styles.module.scss
+++ b/pages/detail/[character_id]/styles.module.scss
@@ -18,10 +18,13 @@
 }
 
 .back_arrow {
-  position: absolute;
-  left: 12px;
+  position:fixed;
+  left: 2px;
   z-index: 10;
-  color: $blue-color;
+  color: $bg-color;
+  background: #000;
+  border-radius: 50%;
+  padding: 4px;
 }
 
 @include for-desktop {
