--- a/components/character-list/styles.module.scss
+++ b/components/character-list/styles.module.scss
@@ -32,8 +32,8 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background-color: $blue-color;
-      outline: 1px solid $blue-color
+      background-color: $black-color;
+      outline: 1px solid $black-color
     }
   }
 }
