--- a/pages/error/styles.module.scss
+++ b/pages/error/styles.module.scss
@@ -16,7 +16,7 @@
   flex-direction: column;
   align-items: center;
   bottom: 120px;
-  background: $blue-color;
+  background: $black-color;
   border-radius: 5px;
   color: $bg-color;
   width: 100%;
