--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,10 +1,8 @@
 $mobile-min-width: 320px;
 $mobile-max-width: 580px;
 $big-mobile-min-width: 600px;
-
 $desktop-min-width: 1024px;
-
 $bg-color: #EDEDEE;
-$blue-color: #3A4767;
+$black-color: rgb(20, 20, 20);
 $brown-color: #70592D;
 
