--- a/components/character-card/styles.module.scss
+++ b/components/character-card/styles.module.scss
@@ -1,15 +1,22 @@
-@import "../../styles/mixins.scss";
+@import '../../styles/mixins.scss';
 
 .card {
   color: $bg-color;
-  background: $brown-color;
+  background: $black-color;
 }
 
 @include for-desktop {
   .card {
-    transition: all ease 0.5s;
+    overflow: hidden;
+
+    img {
+      transition: transform ease 0.5s;
+    }
     &:hover {
-      transform: scale(1.1);
+      img {
+        transform: scale(1.1);
+        filter: brightness(0.8);
+      }
     }
   }
 }
