--- a/components/character-profile/styles.module.scss
+++ b/components/character-profile/styles.module.scss
@@ -1,125 +1,134 @@
-@import "../../styles/mixins.scss";
+@import '../../styles/mixins.scss';
 
 .profile,
-.text,
-.title {
+.profile__text {
   margin-top: 12px;
 }
-.body,
-.header {
+.profile__body,
+.profile__header {
   display: flex;
   flex-direction: column;
 }
 
-.group_title,
-.value_title,
-.episodes_title {
+.profile__group_title,
+.profile__value_title,
+.profile__episodes_title {
   font-size: 16px;
 }
-.texts,
-.episodes {
+.profile__texts,
+.profile__episodes {
   margin-top: 24px;
 }
 
-.title,
-.episodes_title {
+.profile__title,
+.profile__episodes_title {
   color: $bg-color;
   text-align: center;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
+  background: $black-color;
 }
 
 .profile {
-  display: flex;
-  flex-direction: column;
   border-radius: 4px;
   background: #fafafa;
   padding: 12px;
-}
-.image_container {
-  display: flex;
-  justify-content: center;
-}
-
-.title {
-  padding: 4px 0;
-}
-
-.texts {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 14px;
-}
-
-.group {
-  display: flex;
-  flex-direction: column;
-
-  &_title {
-    font-weight: bold;
-  }
-  &_value {
-    margin-top: 8px;
-    text-overflow: ellipsis;
-    max-width: 200px;
-    overflow: hidden;
-  }
-}
-
-.episodes {
-  display: flex;
-  flex-direction: column;
-
-  &_title {
-    color: $bg-color;
+  box-shadow: 4px 4px 9px -1px rgb(0 0 0 / 55%);
+  
+  &__image_container {
+    display: flex;
+    justify-content: center;
   }
 
-  &_list {
-    margin: 14px auto 24px;
+  &__title {
+    padding: 4px 0;
+    width: 280px;
+    margin: auto;
+  }
+
+  &__texts {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 14px;
+  }
+
+  &__group {
+    display: flex;
     flex-direction: column;
-    max-height: 100px;
-    width: 270px;
-    overflow: auto;
-    background: white;
-    li {
-      padding: 4px 8px;
+
+    &_title {
+      font-weight: bold;
+    }
+    &_value {
+      margin-top: 8px;
+      text-overflow: ellipsis;
+      max-width: 200px;
+      overflow: hidden;
+    }
+  }
+
+  &__episodes {
+    display: flex;
+    flex-direction: column;
+
+    &_title {
+      color: $bg-color;
+    }
+
+    &_list {
+      margin: 14px auto 24px;
+      flex-direction: column;
+      max-height: 100px;
+      width: 100%;
+      overflow: auto;
+      background: white;
+      li {
+        padding: 4px 8px;
+      }
     }
   }
 }
 
 @include for-desktop {
   .profile {
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 40px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 40px 24px;
     padding: 40px;
     margin-bottom: 12px;
-  }
 
-  .texts {
-   margin-top: 0;
-  }
-  
-  .title {
-    margin-top: 12px;
-    font-size: 24px;
-  }
-  .group_title,
-  .value_title,
-  .episodes_title {
-    font-size: 20px;
-  }
-  .group {
-    &_value {
-      max-width: 400px;
+    &__texts {
+      margin-top: 0;
     }
-  }
-  .episodes {
-    &_list {
-      width: 400px;
-      max-height: 150px;
+
+    &__title {
+      margin: 0px auto 0;
+
+      font-size: 24px;
+    }
+    &__group_title,
+    &__value_title,
+    &__episodes_title {
+      font-size: 20px;
+    }
+    &__group {
+      &_value {
+        max-width: 400px;
+      }
+    }
+    &__footer {
+      max-width: 820px;
+      margin: auto;
+      width: 100%;
+      margin-right: 33px;
+      grid-column: 1/3;
+    }
+
+    &__episodes {
+      &_list {
+        width: 100%;
+        max-height: 150px;
+      }
     }
   }
 }
