--- a/pages/404.module.scss
+++ b/pages/404.module.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: $blue-color;
+    background: $black-color;
     bottom: 0;
     border-radius: 5px;
     color: $bg-color;
