--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -1,5 +1,15 @@
-@import "../styles/variables.scss";
-@import "../styles/mixins.scss";
+@import '../styles/variables.scss';
+@import '../styles/mixins.scss';
+
+.page {
+  background: url('../public/assets/images/background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  min-height: 100vh;
+  height: auto;
+  width: 100%;
+}
 
 .list {
   position: relative;
@@ -9,40 +19,21 @@
   min-width: $mobile-min-width;
   max-width: $mobile-max-width;
   width: 100%;
-}
 
-.container {
-  margin-top: 24px;
-  width: 100%;
-}
+  &__container {
+    margin-top: 48px;
+    width: 100%;
+  }
 
-.title,
-.subtitle {
-  text-align: center;
-  font-weight: 700;
-}
-
-.title {
-  font-size: 22px;
-  margin-bottom: 24px;
-  width: 100%;
-  padding: 0 8px;
-  border-radius: 5px;
-  background: $blue-color;
-}
-
-.subtitle {
-  font-size: 18px;
-}
-
-.pagination {
-  width: 100%;
-  margin-top: 8px;
-  overflow: hidden;
-  ul {
-    justify-content: center;
-    button {
-      color: $bg-color;
+  &__pagination {
+    width: 100%;
+    margin-top: 8px;
+    overflow: hidden;
+    ul {
+      justify-content: center;
+      button {
+        color: $bg-color;
+      }
     }
   }
 }
@@ -51,14 +42,13 @@
   .list {
     max-width: $desktop-min-width;
     min-width: none;
-  }
 
-  .title {
-    font-size: 32px;
-    margin-bottom: 48px;
-  }
-
-  .subtitle {
-    font-size: 20px;
+    &__pagination {
+      margin-top: 24px;
+      svg,
+      button {
+        font-size: 18px;
+      }
+    }
   }
 }
