--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,26 +12,26 @@
 body {
   font-family: roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: url('../public/assets/images/background.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  backdrop-filter: blur(7px) sepia(1);
   position: relative;
   min-height: 100vh;
   height: auto;
   width: 100%;
 }
+
 html {
   width: 100%;
   height: 100%;
 }
 
-#__next{
+#__next {
   width: 100%;
   height: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
+}
+.Mui-selected {
+  background-color: $brown-color !important;
 }
 
 html,
