--- a/pages/404.module.scss
+++ b/pages/404.module.scss
@@ -2,7 +2,7 @@
 @import '../styles/mixins.scss';
 
 .error {
-  background: url('../public/assets/images/rick_morty404.jpeg');
+  background: url('../public/assets/images/rick_morty404.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -14,10 +14,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: $black-color;
+    background: $bg-color;
     bottom: 0;
     border-radius: 5px;
-    color: $bg-color;
+    color: $black-color;
     width: 100%;
     padding: 24px 0;
   }
