chage background color page

--- a/pages/detail/[character_id]/styles.module.scss
+++ b/pages/detail/[character_id]/styles.module.scss
@@ -2,6 +2,7 @@
 @import '../../../styles/mixins.scss';
 
 .page {
+  background-color: #826445;
   background: url('../../../public/assets/images/background.png');
   background-repeat: no-repeat;
   background-size: cover;
